# compression-project

./: .gitignore  README.md  pyproject.toml  restored.txt
data/: base_text.txt  realistic_text.txt
data/corpus/: article1.txt  article2.txt  article3.txt  article4.txt  article5.txt  article6.txt  article7.txt  book13.txt  book15.txt
docs/: comparison_output.txt  coverage_final.txt  coverage_week2.txt  coverage_week3.txt  coverage_week6.txt  implementation.md  specification.md  testing.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/compression/: __init__.py  main.py  storage.py
src/compression/huffman/: codec.py
src/compression/lz78/: __init__.py  codec.py
src/compression/script/: compare_compression.py
tests/: conftest.py  test_compression_ratio.py  test_end_to_end.py  test_file_pipeline.py  test_huffman.py  test_large_input.py  test_lz78.py  test_realistic_input.py  test_smoke.py  test_storage.py
