[tool.poetry]
name = "compression-project"
version = "0.1.0"
description = "Lossless text compression using Huffman coding and LZ77"
readme = "README.md"
packages = [{ include = "compression", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["compression"]

[tool.coverage.report]
show_missing = true
skip_empty = true