[tool.poetry]
name = "compression-project"
version = "0.1.0"
description = "Lossless text compression using Huffman coding and LZ78"
readme = "README.md"
authors = ["Agharid Ayedh"]
packages = [{ include = "compression", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.0"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------------------
# Ruff configuration
# -----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

# -----------------------------
# Pytest configuration
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# -----------------------------
# Coverage configuration
# -----------------------------
[tool.coverage.run]
branch = true
source = ["src/compression"]
omit = [
  "src/compression/main.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
omit = [
    "*/__init__.py",
]
